fix: Add a missing `overflow: hidden;` property to the viewer filename

--- a/react/Viewer/styles.styl
+++ b/react/Viewer/styles.styl
@@ -75,6 +75,7 @@ $viewerMarginTopMedium = $toolbarHeightMedium - $footerHeight
 .viewer-filename
     max-width     90%
     text-overflow ellipsis
+    overflow hidden
 
 .viewer-pdfviewer-pdf
     overflow auto
